appId: com.webview_v_13_13_5
---
# Simple Bottom Sheet Test
- repeat:
    times: 50
    commands:
      - launchApp
      - assertVisible: "Open WebView"
      - tapOn: "Open WebView"
      - assertVisible: "React Native"





